# baer-refqa

./: README.md  environment.yml  pyproject.toml
docs/: architecture.md  benchmark_protocol.md  risk_register.md
schemas/: refqa_sample.schema.json
scripts/: aggregate_slices.py  bootstrap_dirs.py  build_families.py  build_reference_bank.py  curate_tiers.py  export_schema.py  generate_candidates.py  generate_pilot_data.py  generate_reference_bank.py  generate_simulated_predictions.py  render_report.py  run_asr.py  run_audit.py  run_pilot.sh  run_pipeline.py  run_validity_gates.py
src/baer_refqa/: schema.py  settings.py
src/baer_refqa/audio/: features.py
src/baer_refqa/audit/: metrics.py  models.py  runner.py
src/baer_refqa/curation/: tiering.py
src/baer_refqa/data/: emilia_generator.py  synthetic_generator.py
src/baer_refqa/gates/: behavioral.py  lexical.py  prosody.py
src/baer_refqa/generation/: cosyvoice_adapter.py  models.py  planner.py
src/baer_refqa/models/: __init__.py  asr_adapter.py  simulator.py  speech_adapter.py  text_adapter.py
tests/: test_schema.py  test_settings.py
tests/audit/: test_metrics.py  test_runner.py
tests/curation/: test_tiering.py
tests/data/: test_emilia_generator.py  test_synthetic_generator.py
tests/gates/: test_lexical.py  test_prosody.py
tests/generation/: test_cosyvoice_adapter.py  test_planner.py
tests/models/: test_adapters.py  test_simulator.py
tests/pipeline/: test_orchestrator.py
tests/reference_bank/: test_index.py
tests/reporting/: test_markdown.py
tests/text/: test_family_builder.py
(+7 files in other folders)
