[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "baer-refqa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "librosa>=0.10",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rapidfuzz>=3.9",
  "soundfile>=0.12",
  "torch>=2.0",
  "transformers>=4.40",
  "openai-whisper>=20231117",
  "tqdm>=4.66",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
